e2i/infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datawarehouse
  labels:
    name: datawarehouse
    app: datawarehouse
